new register method added to system with rabbitmq

--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -3,5 +3,6 @@ dependencies {
     implementation libs.springBootJpa
     implementation libs.springCloudOpenFeign
     implementation libs.springCloudConfigClient
+    implementation libs.springBootRabbitMq
 }
 
