--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -4,5 +4,6 @@ dependencies {
    implementation libs.springBootJpa
    implementation libs.springCloudOpenFeign
    implementation libs.springCloudConfigClient
+   implementation libs.springBootRabbitMq
 }
 
