--- a/config-server/src/main/resources/config-repo/user-profile-service-application.yml
+++ b/config-server/src/main/resources/config-repo/user-profile-service-application.yml
@@ -12,9 +12,16 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
-
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: user
+    password: user
 
 jwt:
   secretKey: ${java9secretkey}
   issuer: ${java9issuer}
   audience: ${java9audience}
+
+rabbitmq:
+  register-queue: registerQueue
