new register method added to system with rabbitmq

--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -5,5 +5,6 @@ dependencies {
    implementation libs.springCloudOpenFeign
    implementation libs.springCloudConfigClient
    implementation libs.springBootRabbitMq
+   implementation libs.springBootSecurity
 }
 
