--- a/config-server/src/main/resources/config-repo/auth-service-application.yml
+++ b/config-server/src/main/resources/config-repo/auth-service-application.yml
@@ -28,3 +28,5 @@ rabbitmq:
   auth-exchange: authExchange
   register-queue: registerQueue
   register-bindingKey: registerBindingKey
+  mail-queue: mailQueue
+  mail-bindingKey: mailBindingKey
